--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Create RDP user
         run: |
-          $password = "azizajrar"  # You can randomize this if you want
+          $password = "Test!1234"  # You can randomize this if you want
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
           New-LocalUser -Name "rdpuser" -Password $securePass -AccountNeverExpires
           Add-LocalGroupMember -Group "Administrators" -Member "rdpuser"
@@ -55,3 +55,4 @@ jobs:
             Write-Host "[$(Get-Date)] RDP still active..."
             Start-Sleep -Seconds 300
           }
+
